# roc

./: .README.md.swp  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Gemfile  GetTS.cpp  README.md  Rakefile.rb  project-three-assessment.md
.circleci/: config.yml
accept/: accept.cpp
build-coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coverage.info  run[1]_include.cmake  run[1]_tests.cmake
build-coverage/Testing/Temporary/: CTestCostData.txt
build-coverage/coverage/: index-sort-f.html  index-sort-l.html  index.html
build-coverage/coverage/include/: exceptions.hpp.func-sort-c.html  exceptions.hpp.func.html  exceptions.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  matrix.hpp.func-sort-c.html  matrix.hpp.func.html  matrix.hpp.gcov.html  vectorf.hpp.func-sort-c.html  vectorf.hpp.func.html  vectorf.hpp.gcov.html
build-coverage/coverage/src/: index-sort-f.html  index-sort-l.html  index.html  io.cpp.func-sort-c.html  io.cpp.func.html  io.cpp.gcov.html  minnormsol.cpp.func-sort-c.html  minnormsol.cpp.func.html  minnormsol.cpp.gcov.html  norm2.cpp.func-sort-c.html  norm2.cpp.func.html  norm2.cpp.gcov.html  roc.cpp.func-sort-c.html  roc.cpp.func.html  roc.cpp.gcov.html  sixterm.cpp.func-sort-c.html  sixterm.cpp.func.html  sixterm.cpp.gcov.html  threeterm.cpp.func-sort-c.html  threeterm.cpp.func.html  threeterm.cpp.gcov.html  topline.cpp.func-sort-c.html  topline.cpp.func.html  topline.cpp.gcov.html
build-coverage/coverage/test/: MainTests.cpp.func-sort-c.html  MainTests.cpp.func.html  MainTests.cpp.gcov.html  exceptionsTests.cpp.func-sort-c.html  exceptionsTests.cpp.func.html  exceptionsTests.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ioTests.cpp.func-sort-c.html  ioTests.cpp.func.html  ioTests.cpp.gcov.html  matrixTests.cpp.func-sort-c.html  matrixTests.cpp.func.html  matrixTests.cpp.gcov.html  rocTests.cpp.func-sort-c.html  rocTests.cpp.func.html  rocTests.cpp.gcov.html  sixtermTests.cpp.func-sort-c.html  sixtermTests.cpp.func.html  sixtermTests.cpp.gcov.html  threetermTests.cpp.func-sort-c.html  threetermTests.cpp.func.html  threetermTests.cpp.gcov.html  toplineTests.cpp.func-sort-c.html  toplineTests.cpp.func.html  toplineTests.cpp.gcov.html  vectorfTests.cpp.func-sort-c.html  vectorfTests.cpp.func.html  vectorfTests.cpp.gcov.html
docs/: Comments.tex  Common.tex  README.md  Writing-Checklist.tex  apidoc.tex  hyperref.tex  smith-comments-for-issues.md
docs/MG/: MG.tex
docs/MIS/: MIS.tex
docs/PresentationGroup/: talk.tex
docs/PresentationGroup/images/: divergent.eps
docs/PresentationPOC/: Rakefile.rb  q.tex  talk.tex
docs/PresentationSRS/: .Rakefile.rb.swp  .talk.tex.swo  .talk.tex.swp  talk.tex
docs/ProblemStatement/: .README.md.swp  Bib.bib  ProblemStatement.tex  README.md
docs/Reflection/: Reflection.tex
docs/SRS/: SRS.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: Makefile  VnVReport.tex
docs/rc-presentation/: talk.tex
docs/rc-presentation/images/: convergent.eps
examples/: Makefile  RBMakefile.mk  Rakefile.rb  e_calculus  e_calculus.c  e_calculus.cpp  e_known.cpp  e_laynewatson.cpp  e_laynewatson_gprof_output.txt  e_sevenbody.cpp  e_sevenbody_gprof_output.txt
examples_c/: Makefile  RBMakefile.mk
examples_cpp/: Makefile  RBMakefile.mk  Rakefile.rb  e_laynewatson  e_sevenbody.cpp  gprof_output.txt
include/: data.hpp  dist.h  exceptions.hpp  io.hpp  linearalgebra.hpp  mathext.h  matrix.hpp  nan.h  qrfactorization.h  qrfactorization.hpp  roc.h  roc.hpp  sixterm.hpp  swap.h  threeterm.hpp  topline.h  topline.hpp  utils.h  vectorf.hpp
refs/: References.bib
src/: dist.c  io.cpp  mansup.f  mathext.c  minnormsol.cpp  nan.cpp  norm2.cpp  qrfactorization.c  qrfactorization.cpp  roc.c  roc.cpp  safmin.f  sixterm.cpp  swap.c  threeterm.cpp  topline.c  topline.cpp  utils.cpp
test/: HouseholderTests.cpp  coeff.txt  coeffs.txt  distTests.cpp  exceptionsTests.cpp  ioTests.cpp  ipoptTests.cpp  mathextTests.cpp  matrixTests.cpp  qrTests.cpp  qrfactorizationTests.cpp  rocTests.cpp  sixtermTests.cpp  swapTests.cpp  threetermTests.cpp  toplineTests.cpp  vectorfTests.cpp
